--- a/main.html
+++ b/main.html
@@ -8,6 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<h1>Feedback Form</h1>
+		<label for="name" id="name">Name</label>
+		<input type="text" id="name" value="name" required>
+		<br>
+		<label for="protfolio" id="protfolio">Portfolio</label>
+		<input type="url" id="protfolio" required>
+		<br>
+		<label for="favColor">Color</label>
+		<input type="color" id="favColor">
+		<br>
+		<label for="likeness">Color Likeness</label>
+		<input type="range" id="likeness" min="1" max="100">
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
