--- a/main.html
+++ b/main.html
@@ -10,16 +10,16 @@
 	<!-- the entire body must be written by student -->
 	<form method="post">
 		<h1>Feedback Form</h1>
-		<label for="name" id="name">Name</label>
+		<label for="name" id="name">Name </label>
 		<input type="text" id="name" value="name" minlength="3" maxlength="50" required>
 		<br>
-		<label for="protfolio" id="protfolio">Portfolio</label>
-		<input type="url" id="protfolio" required>
+		<label for="protfolio" id="protfolio">Portfolio </label>
+		<input type="url" name="protfolio" id="protfolio" required>
 		<br>
 		<label for="favColor">Color</label>
 		<input type="color" id="favColor">
 		<br>
-		<label for="likeness">Color Likeness</label>
+		<label for="likeness">Choose Color Likeness</label>
 		<input type="range" id="likeness" min="1" max="100">
 		<br>
 		<input type="submit" value=Submit>
