--- a/main.html
+++ b/main.html
@@ -13,8 +13,8 @@
 		<label for="name" id="name">Name </label>
 		<input type="text" id="name" value="name" minlength="3" maxlength="50" required>
 		<br>
-		<label for="protfolio" id="protfolio">Portfolio </label>
-		<input type="url" name="protfolio" id="protfolio" required>
+		<label for="portfolio" id="portfolio">Portfolio </label>
+		<input type="url" name="portfolio" id="portfolio" required>
 		<br>
 		<label for="favColor">Color</label>
 		<input type="color" id="favColor">
